--- a/PeripheralDriver/.cproject
+++ b/PeripheralDriver/.cproject
@@ -76,10 +76,11 @@
 							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec.2100070290" name="MCU Output Converter Motorola S-rec with symbols" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec"/>
 						</toolChain>
 					</folderInfo>
+					<fileInfo id="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.lib.debug.473581757.1963694279" name="I2CLCD.h" rcbsApplicability="disable" resourcePath="Inc/I2CLCD.h" toolsToInvoke=""/>
 					<fileInfo id="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.lib.debug.473581757.632395940" name="USARTxDriver.h" rcbsApplicability="disable" resourcePath="Inc/USARTxDriver.h" toolsToInvoke=""/>
 					<sourceEntries>
-						<entry excluding="LCDxDriver.h" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc"/>
-						<entry excluding="LCDxDriver.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src"/>
+						<entry excluding="I2CLCD.h|LCDxDriver.h" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc"/>
+						<entry excluding="I2CLCD.c|prueba.c|LCDxDriver.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
